# neural-network-study

./: Cargo.toml  README.md
datasets/: tic-tac-toe.json
src/: apples.rs  lib.rs  main.rs  matrix.rs  neural_network.rs  nn.rs  simple.rs  tictactoe.rs
