[package]
name = "neural-network-study"
version = "0.2.0"
edition = "2024"
authors = ["Philipp Brendel <waldrumpus@gmail.com>"]
description = "A toy neural network library for educational purposes"
license = "MIT"
repository = "https://github.com/brend/neural-network-study"
readme = "README.md"

[dependencies]
macroquad = "0.4.14"
rand = "0.9.1"
serde_json = "1.0.140"
